fixed contrast 3rd try turned off dark reader

--- a/style.css
+++ b/style.css
@@ -77,19 +77,19 @@ footer h3 {
 /* class for dark background */
 .black-background {
   background-color: #000;
-  color: #ffffff;
+  color: #fff;
 }
 
 /* class for medium background */
 .green-background {
   background-color: #9eefe5;
-  color: #000000;
+  color: #000;
 }
 
 /* class for light background */
 .blue-background {
   background-color: #4f7cac;
-  color: #ffffff;
+  color: #000;
 }
 
 /* content wrap */
@@ -103,7 +103,7 @@ footer h3 {
 /*Projects */
 
 .projects .btn {
-  color: #d9d9d9;
+  color: #fff;
   background: #000;
   text-decoration: none;
   padding: 8px;
@@ -136,7 +136,6 @@ footer h3 {
 }
 
 .contact-list a {
-  color: #fff;
   padding: 5px;
   display: inline-block;
 }
@@ -244,9 +243,5 @@ fieldset {
   }
   header nav {
     margin-top: 8px;
-  }
-
-  header nav ul li a:hover {
-    color: #bdbdbd;
   }
 }
